# substrate-node-template

./: README.md
node/: Cargo.toml
node/src/: chain_spec.rs
pallets/template/: Cargo.toml
pallets/template/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
