[package]
name = "node-template"
version = "2.0.0-alpha.5"
authors = ["Anonymous"]
edition = "2018"
license = "Unlicense"
build = "build.rs"

[[bin]]
name = "node-template"

[dependencies]
futures = "0.3.4"
log = "0.4.8"
structopt = "0.3.8"

sc-cli = { version = "0.8.0-alpha.5" }
sp-core = { version = "2.0.0-alpha.5" }
sc-executor = { version = "0.8.0-alpha.5" }
sc-service = { version = "0.8.0-alpha.5" }
sp-inherents = { version = "2.0.0-alpha.5" }
sc-transaction-pool = { version = "2.0.0-alpha.5" }
sp-transaction-pool = { version = "2.0.0-alpha.5" }
sc-network = { version = "0.8.0-alpha.5" }
sc-consensus-aura = { version = "0.8.0-alpha.5" }
sp-consensus-aura = { version = "0.8.0-alpha.5" }
sp-consensus = { version = "0.8.0-alpha.5" }
sc-finality-grandpa = { version = "0.8.0-alpha.5" }
sp-finality-grandpa = { version = "2.0.0-alpha.5" }
sc-client = { version = "0.8.0-alpha.5" }
sc-client-api = { version = "2.0.0-alpha.5" }
sp-runtime = { version = "2.0.0-alpha.5" }
sc-basic-authorship = { version = "0.8.0-alpha.5" }

node-template-runtime = { version = "2.0.0-alpha.5", path = "../runtime" }

[build-dependencies]
vergen = "3.0.4"
build-script-utils = { version = "2.0.0-alpha.5", package = "substrate-build-script-utils" }
