[package]
name = "node-template"
version = "2.0.0-rc4"
authors = ["Anonymous"]
edition = "2018"
license = "Unlicense"
build = "build.rs"

[[bin]]
name = "node-template"

[dependencies]
futures = "0.3.4"
log = "0.4.8"
structopt = "0.3.8"
parking_lot = "0.10.0"

sc-cli = { version = "0.8.0-rc4" }
sp-core = { version = "2.0.0-rc4" }
sc-executor = { version = "0.8.0-rc4" }
sc-service = { version = "0.8.0-rc4" }
sp-inherents = { version = "2.0.0-rc4" }
sc-transaction-pool = { version = "2.0.0-rc4" }
sp-transaction-pool = { version = "2.0.0-rc4" }
sc-network = { version = "0.8.0-rc4" }
sc-consensus-aura = { version = "0.8.0-rc4" }
sp-consensus-aura = { version = "0.8.0-rc4" }
sp-consensus = { version = "0.8.0-rc4" }
sc-consensus = { version = "0.8.0-rc4" }
sc-finality-grandpa = { version = "0.8.0-rc4" }
sp-finality-grandpa = { version = "2.0.0-rc4" }
sc-client-api = { version = "2.0.0-rc4" }
sp-runtime = { version = "2.0.0-rc4" }
sc-basic-authorship = { version = "0.8.0-rc4" }

node-template-runtime = { version = "2.0.0-rc4", path = "../runtime" }

[build-dependencies]
vergen = "3.0.4"
substrate-build-script-utils = { version = "2.0.0-rc4" }
