[package]
name = "node-template-runtime"
version = "2.0.0-rc2"
authors = ["Anonymous"]
edition = "2018"
license = "Unlicense"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true, features = ["derive"] }

pallet-aura = { version = "2.0.0-rc2", default-features = false }
pallet-balances = { version = "2.0.0-rc2", default-features = false }
frame-support = { version = "2.0.0-rc2", default-features = false }
pallet-grandpa = { version = "2.0.0-rc2", default-features = false }
pallet-indices = { version = "2.0.0-rc2", default-features = false }
pallet-randomness-collective-flip = { version = "2.0.0-rc2", default-features = false }
pallet-sudo = { version = "2.0.0-rc2", default-features = false }
frame-system = { version = "2.0.0-rc2", default-features = false }
pallet-timestamp = { version = "2.0.0-rc2", default-features = false }
pallet-transaction-payment = { version = "2.0.0-rc2", default-features = false }
frame-executive = { version = "2.0.0-rc2", default-features = false }
sp-api = { version = "2.0.0-rc2", default-features = false }
sp-block-builder = { version = "2.0.0-rc2", default-features = false }
sp-consensus-aura = { version = "0.8.0-rc2", default-features = false }
sp-core = { version = "2.0.0-rc2", default-features = false }
sp-inherents = { version = "2.0.0-rc2", default-features = false }
sp-io = { version = "2.0.0-rc2", default-features = false }
sp-offchain = { version = "2.0.0-rc2", default-features = false }
sp-runtime = { version = "2.0.0-rc2", default-features = false }
sp-session = { version = "2.0.0-rc2", default-features = false }
sp-std = { version = "2.0.0-rc2", default-features = false }
sp-transaction-pool = { version = "2.0.0-rc2", default-features = false }
sp-version = { version = "2.0.0-rc2", default-features = false }

template = { package = "pallet-template", default-features = false, path = "../pallets/template" }

[build-dependencies]
wasm-builder-runner = { version = "1.0.5", package = "substrate-wasm-builder-runner" }

[features]
default = ["std"]
std = [
    "codec/std",
    "serde",
    "frame-executive/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-aura/std",
    "pallet-balances/std",
    "pallet-grandpa/std",
    "pallet-indices/std",
    "pallet-randomness-collective-flip/std",
    "pallet-sudo/std",
    "pallet-timestamp/std",
    "pallet-transaction-payment/std",
    "sp-api/std",
    "sp-block-builder/std",
    "sp-consensus-aura/std",
    "sp-core/std",
    "sp-inherents/std",
    "sp-io/std",
    "sp-offchain/std",
    "sp-runtime/std",
    "sp-session/std",
    "sp-std/std",
    "sp-transaction-pool/std",
    "sp-version/std",
    "template/std",
]
