[package]
authors = ['Anonymous']
edition = '2018'
name = 'pallet-template'
version = '0.1.0'

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }
frame-support = { version = "2.0.0-rc2", default-features = false }
frame-system = { version = "2.0.0-rc2", default-features = false }

[dev-dependencies]
sp-io = { version = "2.0.0-rc2", default-features = false }
sp-core = { version = "2.0.0-rc2", default-features = false }
sp-runtime = { version = "2.0.0-rc2", default-features = false }


[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std'
]
